# Intelligent-Unstructured-Document-Understanding

./: .env.example  .gitignore  Dockerfile  agent.py  api.py  api_client.py  batch_processor.py  caption_pipeline.py  eval.py  evaluation.py  full_prompt.txt  image_processor.py  ingestion.py  injestion.py  knowledge.py  main.py  memory.py  orchestrator.py  pii.py  pyproject.toml  rate_limiter.py  readme.md  requirements.txt  retrieval.py  synthesis.py  workflow.md
.github/workflows/: sync-to-hf.yml
app/: chunking.py  injestion.py  main.py  retrieval.py  streamlit_app.py
backend/: answerer.py  embedder.py  main.py  parser.py  requirements.txt
backend/chroma_db/: chroma.sqlite3
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  DashboardWorkspace.jsx  MarketingPages.jsx  index.css
frontend/src/lib/: supabaseClient.js
scratch/: agentic_rag_experiment.py
src/: config.py  llm_router.py
src/extraction/: domain_detector.py  gliner_extractor.py  ner.py  relation_extractor.py
src/graph/: falkordb_client.py  graph_publisher.py
src/ingestion/: chunker.py  image_processor.py  parser.py
src/pipeline/: ingestion_pipeline.py  query_pipeline.py
src/resolution/: entity_resolution.py
src/retrieval/: answer_generator.py  embedder.py  hybrid_retriever.py  reranker.py
tests/: conftest.py  test_answer_generator.py  test_chunker.py  test_domain_detector.py  test_embedder.py  test_gliner_extractor.py  test_graph.py  test_image_processor.py  test_ingestion_pipeline.py  test_ner.py  test_parser.py  test_query_pipeline.py  test_relation_extractor.py  test_reranker.py  test_resolution.py  test_retrieval.py  test_streamlit_app.py
