[project]
name = "intelligent-unstructured-document-understanding"
version = "0.1.0"
description = "GraphRAG pipeline for intelligent multimodal document understanding"
readme = "readme.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "falkordb>=1.0.9",
    "ollama>=0.3.0",
    "requests>=2.31.0",
    "docling>=2.103.0",
    "docling-core>=2.83.0",
    "spacy>=3.8.14",
    "fastcoref>=2.1.6",
    "en-core-web-trf",
    "transformers<5",
    "gliner>=0.2.27",
    "splink>=4.0.16",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests that run the full model stack over the corpus",
]

[tool.uv.sources]
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "reportlab>=5.0.0",
]
