[project]
name = "intelligent-unstructured-document-understanding"
version = "0.1.0"
description = "GraphRAG pipeline for intelligent multimodal document understanding"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "falkordb>=1.0.9",
    "ollama>=0.3.0",
    "requests>=2.31.0",
    "docling>=2.103.0",
    "docling-core>=2.83.0",
    "spacy>=3.8.14",
    "en-core-web-sm",
    "litellm>=1.40.0",
    "leidenalg>=0.10.0",
    "python-igraph>=0.11.0",
    "transformers<5",
    "gliner>=0.2.27",
    "splink>=4.0.16",
    "streamlit>=1.58.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "opencv-python-headless>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests that run the full model stack over the corpus",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "reportlab>=5.0.0",
]
